修改 bash 为 shell

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/1.view-resources-optional.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/1.view-resources-optional.md
@@ -16,13 +16,13 @@
 
 运行以下命令，查看操作系统信息：
 
-```bash
+```shell
 cat /etc/redhat-release
 ```
 
 返回结果如下：
 
-```bash
+```shell
 Red Hat Enterprise Linux Server release 7.2 (Maipo)
 ```
 
@@ -30,13 +30,13 @@ Red Hat Enterprise Linux Server release 7.2 (Maipo)
 
 运行以下命令，查看操作系统信息：
 
-```bash
+```shell
 cat /etc/redhat-release
 ```
 
 返回结果如下：
 
-```bash
+```shell
 CentOS Linux release 7.2.1511 (Core)
 ```
 
@@ -44,13 +44,13 @@ CentOS Linux release 7.2.1511 (Core)
 
 运行以下命令，查看操作系统信息：
 
-```bash
+```shell
 cat /etc/os-release
 ```
 
 返回结果如下：
 
-```bash
+```shell
 NAME="Anolis OS"
 VERSION="8.2"
 ID="anolis"
@@ -66,13 +66,13 @@ HOME_URL="https://openanolis.cn/"
 
 运行以下命令，查看操作系统信息：
 
-```bash
+```shell
 cat /etc/os-release
 ```
 
 返回结果如下：
 
-```bash
+```shell
 NAME="Ubuntu"
 VERSION="20.04.2 LTS (Focal Fossa)"
 ID=ubuntu
@@ -91,13 +91,13 @@ UBUNTU_CODENAME=focal
 
 运行以下命令，查看操作系统信息：
 
-```bash
+```shell
 cat /etc/os-release
 ```
 
 返回结果如下：
 
-```bash
+```shell
 PRETTY_NAME="Debian GNU/Linux 9 (stretch)"
 NAME="Debian GNU/Linux"
 VERSION_ID="9"
@@ -113,7 +113,7 @@ BUG_REPORT_URL="https://bugs.debian.org/"
 
 运行以下命令，查看内核信息：
 
-```bash
+```shell
 uname -r 
 ```
 
@@ -123,7 +123,7 @@ OceanBase 数据库要求操作系统为 3.10.0 及以上。
 
 运行以下命令，查看内存：
 
-```bash
+```shell
 free -g
 ```
 
@@ -131,7 +131,7 @@ free -g
 
 执行以下命令，清理缓存：
 
-```bash
+```shell
 echo 3 > /proc/sys/vm/drop_caches
 ```
 
@@ -139,7 +139,7 @@ echo 3 > /proc/sys/vm/drop_caches
 
 运行以下命令，查看磁盘：
 
-```bash
+```shell
 df -h
 ```
 
@@ -149,7 +149,7 @@ df -h
 
 您需要为配置文件中的 `devname` 配置项指定网卡。示例配置文件如下：
 
-```bash
+```shell
 # Please set devname as the network adaptor's name whose ip is  in the setting of severs.
 # if set severs as "127.0.0.1", please set devname as "lo"
 # if current ip is 192.168.1.10, and the ip's network adaptor's name is "eth0", please use "eth0"
@@ -158,7 +158,7 @@ devname: eth0
 
 执行以下命令，查看网卡名称：
 
-```bash
+```shell
 ifconfig
 ```
 
