--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/2.use-ssh-to-log-on-without-password.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/2.use-ssh-to-log-on-without-password.md
@@ -16,7 +16,7 @@
 
 1. 在中控机器上运行以下命令查看密钥是否存在：
 
-   ```bash
+   ```shell
    ls ~/.ssh/id_rsa.pub
    ```
 
@@ -24,13 +24,13 @@
 
 2. （可选）在中控机器上运行以下命令生成 SSH 公钥和私钥：
 
-   ```bash
+   ```shell
    ssh-keygen -t rsa
    ```
 
 3. 将中控机的公钥复制到目标机器的 authorized_keys 文件中：
 
-   ```bash
+   ```shell
    ssh-copy-id -i ~/.ssh/id_rsa.pub <user>@<server_ip>
    ```
 
@@ -38,7 +38,7 @@
 
 推荐您使用以下脚本，执行以下脚本需要拥有 sudo 权限。
 
-```bash
+```shell
 #!/usr/bin/bash
    
 SERVERS=("<user>@<server_ip1>" "<user>@<server_ip2>" "<user>@<server_ip3>")
