--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/3.configure-the-clock-source-optional.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/3.configure-the-clock-source-optional.md
@@ -14,7 +14,7 @@
 
 1. 在每台机器上执行以下命令安装 NTP。
 
-   ```bash
+   ```shell
    yum install ntp ntpdate -y
    ```
 
@@ -22,7 +22,7 @@
 
    当物理机与时钟服务器的时间误差在 50ms 以内时，系统即认为时钟是同步的。
 
-   ```bash
+   ```shell
    [root@centos-01 /root]#ntpq -4p
    remote refid st t when poll reach delay offset jitter
    ==============================================================================
@@ -37,13 +37,13 @@
 
       以 root 用户登录 NTP 服务端服务器，运行以下命令编辑配置文件：
 
-      ```bash
+      ```shell
       vi /etc/ntp.conf
       ```
 
       在配置文件中添加以下内容：
 
-      ```bash
+      ```shell
       server <yout_ntp_server_ip>
       ```
 
@@ -51,19 +51,19 @@
 
    2. 运行以下命令重启 NTP 服务端服务：
 
-      ```bash
+      ```shell
       service ntpd restart
       ```
 
    3. 运行以下命令查看 NTP 服务端服务是否启动成功：
 
-      ```bash
+      ```shell
       ps -ef | grep -i ntpd
       ```
 
    4. 运行以下命令设置 NTP 服务开机自启动：
 
-      ```bash
+      ```shell
       chkconfig ntpd on
       ```
 
@@ -78,13 +78,13 @@
 
    2. 运行以下命令停止 NTP 服务：
 
-      ```bash
+      ```shell
       service ntpd stop
       ```
 
    3. 运行以下命令同步 NTP 服务端时间：
 
-      ```bash
+      ```shell
       ntpdate 10.10.10.1
       ```
 
@@ -92,19 +92,19 @@
 
       运行以下命令打开配置文件：
 
-      ```bash
+      ```shell
       vi /etc/ntp.conf
       ```
 
       在配置文件中添加以下内容：
 
-      ```bash
+      ```shell
       server <yout_ntp_server_ip>
       ```
 
    5. 运行以下命令，启动 NTP 服务：
 
-      ```bash
+      ```shell
       /etc/init.d/ntpd start
       ```
 
@@ -112,13 +112,13 @@
 
    运行命令：
 
-   ```bash
+   ```shell
    ntpstat
    ```
 
    返回以下结果：
 
-   ```bash
+   ```shell
    synchronised to NTP server (xxx.xxx.xxx.xxx) at stratum 3
    time correct to within 2 ms
    polling server every 64 s
@@ -126,13 +126,13 @@
 
    运行命令：
 
-   ```bash
+   ```shell
    timedatectl
    ```
 
    返回以下结果：
 
-   ```bash
+   ```shell
          Local time: Thu 2021-04-22 11:02:32 CST
      Universal time: Thu 2021-04-22 03:02:32 UTC
            RTC time: Thu 2021-04-22 11:02:32
