--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/5.configure-limits-conf-optional.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/5.configure-limits-conf-optional.md
@@ -23,13 +23,13 @@ OceanBase 数据库的进程涉及的限制包括线程最大栈空间大小（S
 
 执行以下命令，打开 `/etc/security/limits.conf` 配置文件：
 
-```bash
+```shell
 vi /etc/security/limits.conf
 ```
 
 在 `/etc/security/limits.conf` 配置文件中添加以下内容：
 
-```bash
+```shell
 root soft nofile 655350
 root hard nofile 655350
 * soft nofile 655350
@@ -46,6 +46,6 @@ root hard nofile 655350
 
 退出当前会话，重新登录。执行以下命令，查看配置是否生效：
 
-```bash
+```shell
 ulimit -a
 ```
