--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/7.disable-the-firewall-and-selinux-optional.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/7.disable-the-firewall-and-selinux-optional.md
@@ -11,7 +11,7 @@
 
 依次执行以下命令，关闭防火墙：
 
-```bash
+```shell
 systemctl disable firewalld 
 systemctl stop firewalld
 systemctl status firewalld
@@ -21,25 +21,25 @@ systemctl status firewalld
 
 执行以下命令，打开 `/etc/selinux/config` 配置文件：
 
-```bash
+```shell
 vi /etc/selinux/config
 ```
 
 在 `/etc/selinux/config` 配置文件中修改对应配置项为以下内容：
 
-```bash
+```shell
 SELINUX=disabled
 ```
 
 执行以下命令或重启服务器，使更改生效：
 
-```bash
+```shell
 setenforce 0
 ```
 
 执行以下命令，查看更改是否生效：
 
-```bash
+```shell
 sestatus
 ```
 
@@ -49,12 +49,12 @@ sestatus
 
 * 执行以下命令关闭 numa balancing，避免 balance 过程中性能可能发生抖动
 
-  ```bash
+  ```shell
   sysctl kernel.numa_balancing=0
   ```
 
 * 执行以下命令将 zone_reclaim_mode 设置为0
 
-  ```bash
+  ```shell
   sysctl vm.zone_reclaim_mode=0
   ```
