--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/8.create-user-optional.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/8.create-user-optional.md
@@ -13,7 +13,7 @@
 
 1. 执行以下命令，创建账户 admin。
 
-   ```bash
+   ```shell
    [root@test001 ~]# useradd -U admin -d /home/admin -s /bin/bash
    [root@test001 ~]# mkdir -p /home/admin
    [root@test001 ~]# chown -R admin:admin /home/admin
@@ -21,7 +21,7 @@
 
 2. 执行以下命令，为账户 admin 设置密码。
 
-   ```bash
+   ```shell
    [root@test001 ~]# passwd admin
    ```
 
@@ -29,7 +29,7 @@
 
    执行以下命令，打开 `/etc/sudoers` 文件，在 `/etc/sudoers` 文件添加以下内容：
 
-   ```bash
+   ```shell
    [root@test001 ~]# vim /etc/sudoers
    # 添加如下内容：
    ## Same thing without a password
@@ -41,7 +41,7 @@
 
    执行如下命令：
 
-   ```bash
+   ```shell
    [root@test001 ~]# chown -R admin:admin /data
    [root@test001 ~]# chown -R admin:admin /redo
    [root@test001 ~]# chown -R admin:admin /home/admin
@@ -51,13 +51,13 @@
 
    执行以下命令，查看目录权限。
 
-   ```bash
+   ```shell
    [root@test001 data]# ls -al
    ```
 
    返回如下结果：
 
-   ```bash
+   ```shell
    drwxr-xr-x 2 admin admin 4096 2 月 9 18:43 .
    drwxr-xr-x 2 admin admin 4096 2 月 9 18:43 log1
    ```
