--- a/zh-CN/1.learn-more-about-oceanbase/3.system-architecture.md
+++ b/zh-CN/1.learn-more-about-oceanbase/3.system-architecture.md
@@ -36,7 +36,7 @@ Major SSTable 的微块会在合并过程中用编码方式进行格式转换，
 
 日志流的主副本在被选举成为主后会获得租约（Lease），正常工作的主副本在租约有效期内会不停的通过选举协议延长期租约。主副本只会在租约有效时执行主的工作，租约机制保证了数据库异常处理的能力。
 
-复制层能够自动应对服务器故障，保障数据库服务的持续可用。如果出现少于半数的从副本所在服务器出现问题，因为还有多于半数的副本正常工作，数据库的服务不受影响。如果主副本所在服务器出现问题，其租约会得不到延续，待其租约失效后，其他从副本会通过选举协议选举出新的主副本并授予新的租约，之后即可恢复数据库的服务。
+复制层能够自动应对服务器故障，保障数据库服务的持续可用。如果出现少于半数的从副本所在服务器故障，因为还有多于半数的副本正常工作，数据库的服务不受影响。如果主副本所在服务器出现问题，其租约会得不到延续，待其租约失效后，其他从副本会通过选举协议选举出新的主副本并授予新的租约，之后即可恢复数据库的服务。
 
 ## 均衡层
 
