建议增加一个各个层级的逻辑架构图
建议增加一个各个层级的逻辑架构图

--- a/zh-CN/1.learn-more-about-oceanbase/3.system-architecture.md
+++ b/zh-CN/1.learn-more-about-oceanbase/3.system-architecture.md
@@ -13,6 +13,7 @@ OceanBase 集群部署需要配置可用区（Zone），由若干个服务器组
 OceanBase 内置多租户特性，每个租户对于使用者是一个独立的数据库，一个租户能够在租户级别设置租户的分布式部署方式。租户之间 CPU、内存和 IO 都是隔离的。
 
 OceanBase的数据库实例内部由不同的组件相互协作，这些组件从底层向上由存储层、复制层、均衡层、事务层、SQL 层、接入层组成。
+此处我觉得加一个架构图（各个层级的逻辑关系图）可能会更好理解些
 
 ## 存储层
 
