预览后修改低错

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -39,6 +39,7 @@
 本文采用三副本部署模式，推荐使用四台机器，您可以根据自己实际情况选择合适的部署方案。本文中四台机器的使用情况如下：
 
 | 角色           | 机器           | 备注                 |
+|----------------|--------------|-----------------------|
 | OBD            | 10.10.10.4 | 中控机，自动化部署软件    |
 | OBServer 节点  | 10.10.10.1 | OceanBase 数据库 Zone1   |
 | OBServer 节点  | 10.10.10.2 | OceanBase 数据库 Zone2   |
@@ -141,6 +142,7 @@
      <ul>
      <li>小规格开发模式：适用于个人设备（内存不低于 8 GB），配置文件名中带有 <code>mini</code> 或 <code>min</code> 标识。</li>
      <li>专业开发模式：适用于高配置 ECS 或物理服务器（可用资源不低于 16 核 64 GB）。</li>
+     </ul>
    </main>
 
    如果您选择单机部署，即目标机器只有一台，可使用单机部署配置文件。
@@ -249,7 +251,7 @@
 
       <main id="notice" type='explain'>
         <h4>说明</h4>
-        <p>配置文件中对应 server 中的配置优先级高于 `global`。</p>
+        <p>配置文件中对应 server 中的配置优先级高于 <code>global</code>。</p>
       </main>
 
    3. 配置 obproxy-ce 组件并修改 IP 和 `home_path`。
