--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md
@@ -12,7 +12,7 @@
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>OBD 是通过 SSH 远程执行安装部署，所以您需通过 SSH 验证 Java 环境是否可用，详细操作请参考 <a href="#java%20%环境验证">Java 环境验证</a>。</p>
+    <p>OBD 是通过 SSH 远程执行安装部署，所以您需通过 SSH 验证 Java 环境是否可用，详细操作请参考 <b>Java 环境验证</b>。</p>
   </main>
 
 ## 准备软件
