400ofuse Modification of pagination query comments

--- a/zh-CN/7.reference/4.development-reference/2.sql-specifications-and-practices/3.sql-statement-example/4.paging-query.md
+++ b/zh-CN/7.reference/4.development-reference/2.sql-specifications-and-practices/3.sql-statement-example/4.paging-query.md
@@ -145,7 +145,7 @@ GROUP BY
   catalog_code,
   catalog_id
 LIMIT
-  offset, 15﻿;
+  offset, 15;
 ```
 
 该表中数据量为 500 万。
@@ -204,7 +204,7 @@ GROUP BY
   catalog_code,
   catalog_id
 LIMIT
-  offset, 15
+  offset, 15;
 ```
 
 此时重新执行上述偏移量，返回时间均在 5S 左右，实现了 SQL 优化。
@@ -212,8 +212,8 @@ LIMIT
   <main id="notice" type='notice'>
     <h4>注意</h4>
     <p>该案例分析后发现，以下内容：</p>
-    <ol>
+    <ul>
     <li>在 OB 集群中，随着 offset 偏移量的增加，查询返回时间会随之增加。</li>
-    <li>在设置并行数的时候，经测试，最佳并行数为该表的分片数。OB 是系统自动分片的 ，无需开发接入，因此设置并行时，需要先查询该表的分片数。</li>
-    </ol>
+    <li>在设置并行数的时候，经测试，最佳并行数为该表的分区数。</li>
+    </ul>
   </main>
