--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -4,7 +4,9 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
 
 有关 OceanBase 集群部署的详细信息，请参见 [部署简介](../../4.deploy/1.deploy-overview.md)。
 
-## 服务器和介质准备
+## 前提条件
+
+在参考本文安装 OceanBase 数据库之前，确保您的软硬件环境满足以下要求：
 
 1. 服务器架构及 Linux 操作系统版本要求。
 
@@ -37,11 +39,11 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
 
 ### 步骤 1：下载并安装 all-in-one package
 
-从 V4.0.0 开始，OceanBase 提供统一的安装包 all-in-one package。您可以通过这个统一的安装包一次性完成 OBD、OceanBase 数据库、 OBProxy、obagent、Grafana、ocp-express 和 Prometheus 的安装；您可以根据实际需求选择部分组件安装或者指定组件的版本。
+从 V4.0.0 开始，OceanBase 提供统一的安装包 all-in-one package。您可以通过这个统一的安装包一次性完成 OBD、OceanBase 数据库、 ODP、OBAgent、Grafana、OCP Express 和 Prometheus 的安装；您可以根据实际需求选择部分组件安装或者指定组件的版本。
 
 #### 离线安装 all-in-one package
 
-1. 从 [OceanBase 下载中心](https://www.oceanbase.com/softwarecenter) 下载最新的企业版 all-in-one package 安装包。
+1. 请联系技术支持获取最新的企业版 all-in-one package 安装包。
 
 2. 执行以下命令解压安装包并进入安装目录。
 
@@ -142,7 +144,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
 
 + 打开的文件句柄数量不小于 `20000`。
   
-`obd demo` 部署方式采用最小规格部署，部署的组件版本默认为最新版本，默认部署的组件包含 oceanbase、obproxy、obagent、grafana、prometheus。
+`obd demo` 部署方式采用最小规格部署，部署的组件版本默认为最新版本，默认部署的组件包含 OceanBase、ODP、OBAgent、Grafana、Prometheus。
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
@@ -258,7 +260,7 @@ obclient [(none)]>
 +-------------------------------------+-------+-----------+--------+
  ```
 
-## 创建普通租户
+### 创建普通租户
 
 OceanBase 集群部署完成后，数据库中默认创建 `sys` 租户。此后可以根据业务需要使用 `sys` 租户新建普通租户。
 
