--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -154,7 +154,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
 #### 部署并启动 OceanBase 数据库
 
 ```shell
-[root@****]# obd demo -c 
+[root@****]# obd demo -c oceanbase,obproxy
 Package oceanbase-4.1.0.0-100000982023031415.el7 is available.
 Package obproxy-4.1.0.0-32023021710.el7 is available.
 install oceanbase-4.1.0.0 for local ok
