--- a/en-US/7.reference/5.system-refrence/2.system-variable-for-mysql/117.sql_mode-1-2-3.md
+++ b/en-US/7.reference/5.system-refrence/2.system-variable-for-mysql/117.sql_mode-1-2-3.md
@@ -8,7 +8,7 @@ sql_mode
 |--------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | Parameter type | Varchar |
 | Default value | STRICT_ALL_TABLES,NO_ZERO_IN_DATE |
-| Value range | Any combination of the following values is supported:<ul><li>ANSI_QUOTES: The string quotation mark (") is used as the identifier quotation mark (\`). Therefore, strings cannot be quoted with double quotation marks. </li><li>ERROR_FOR_DIVISION_BY_ZERO: affects the handling of division by zero when INSERT or UPDATE statements are executed. </li><ul><li>If ERROR_FOR_DIVISION_BY_ZERO is disabled, division by zero inserts NULL. </li><li>If ERROR_FOR_DIVISION_BY_ZERO is enabled but strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) is disabled, division by zero inserts NULL. </li><li>If both strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) and ERROR_FOR_DIVISION_BY_ZERO are enabled, division by zero produces an error. </li><li>If both strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) and ERROR_FOR_DIVISION_BY_ZERO are enabled and `IGNORE` is specified, division by zero inserts NULL. </li></ul><li>NO_AUTO_CREATE_USER: prevents the GRANT statement from automatically creating new user accounts with empty passwords. </li><li>NO_ENGINE_SUBSTITUTION: returns an error when a statement specifies a storage engine that is disabled or not compiled in. If this mode is disabled, the default storage engine is used and an exception is thrown when the default engine is unavailable. </li><li>NO_ZERO_DATE: specifies whether the server allows dates in the '0000-00-00' format. </li><ul><li>If the NO_ZERO_IN_DATE mode is disabled, dates in the '0000-00-00' format are allowed. </li><li>When the NO_ZERO_DATE mode is enabled but the strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) is disabled, dates in the '0000-00-00' format are allowed. </li><li>If both the strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) and the NO_ZERO_DATE mode are enabled, dates in the '0000-00-00' format are not allowed, and an error is returned. </li><li>If both the strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) and the NO_ZERO_DATE mode are enabled and "ignore" is specified, dates in the '0000-00-00' format are allowed. </li></ul><li>NO_ZERO_IN_DATE: specifies whether the server allows dates in which the year part is nonzero but the month or day part is zero. For example, this mode affects dates such as'2010-00-01' and '2010-01-00'. <ul><li>If the NO_ZERO_IN_DATE mode is disabled, the server allows a date in which the year part is nonzero but the month or day part is zero. </li><li>If the NO_ZERO_IN_DATE mode is enabled but the strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) is disabled, a date in which the year part is nonzero but the month or day part is zero will be inserted as '0000-00-00'. </li><li>If both the strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) and the NO_ZERO_IN_DATE mode are enabled, a date in which the year part is nonzero but the month or day part is zero is not allowed and inserts produce an error. </li><li>If both the strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) and the NO_ZERO_IN_DATE mode are enabled and "ignore" is specified, a date in which the year part is nonzero but the month or day part is zero will be inserted as '0000-00-00'. </li></ul><li>ONLY_FULL_GROUP_BY: rejects queries for which the select list, HAVING condition, or ORDER BY list refers to non-aggregated columns that are neither named in the GROUP BY clause nor are functionally dependent on or uniquely determined by GROUP BY columns. </li><li>PAD_CHAR_TO_FULL_LENGTH: retains the trailing spaces in CHAR column values upon retrieval and the retrieved CHAR values are padded to their full length. </li><li>STRICT_ALL_TABLES: enables the strict SQL mode for all storage engines and rejects invalid data values. </li><li>STRICT_TRANS_TABLES: enables the strict SQL mode for the transaction storage engine and if possible, for non-transaction storage engines. </li></ul> |
+| Value range | Any combination of the following values is supported:<ul><li>ANSI_QUOTES: The string quotation mark (") is used as the identifier quotation mark (\`). Therefore, strings cannot be quoted with double quotation marks. </li><li>ERROR_FOR_DIVISION_BY_ZERO: affects the handling of division by zero when INSERT or UPDATE statements are executed. </li><ul><li>If ERROR_FOR_DIVISION_BY_ZERO is disabled, division by zero inserts NULL. </li><li>If ERROR_FOR_DIVISION_BY_ZERO is enabled but strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) is disabled, division by zero inserts NULL. </li><li>If both strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) and ERROR_FOR_DIVISION_BY_ZERO are enabled, division by zero produces an error. </li><li>If both strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) and ERROR_FOR_DIVISION_BY_ZERO are enabled and `IGNORE` is specified, division by zero inserts NULL. </li></ul><li>NO_AUTO_CREATE_USER: prevents the GRANT statement from automatically creating new user accounts with empty passwords. </li><li>NO_ENGINE_SUBSTITUTION: returns an error when a statement specifies a storage engine that is disabled or not compiled in. If this mode is disabled, the default storage engine is used and an exception is thrown when the default engine is unavailable. This field is currently only used for compatibility. </li><li>NO_ZERO_DATE: specifies whether the server allows dates in the '0000-00-00' format. </li><ul><li>If the NO_ZERO_IN_DATE mode is disabled, dates in the '0000-00-00' format are allowed. </li><li>When the NO_ZERO_DATE mode is enabled but the strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) is disabled, dates in the '0000-00-00' format are allowed. </li><li>If both the strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) and the NO_ZERO_DATE mode are enabled, dates in the '0000-00-00' format are not allowed, and an error is returned. </li><li>If both the strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) and the NO_ZERO_DATE mode are enabled and "ignore" is specified, dates in the '0000-00-00' format are allowed. </li></ul><li>NO_ZERO_IN_DATE: specifies whether the server allows dates in which the year part is nonzero but the month or day part is zero. For example, this mode affects dates such as'2010-00-01' and '2010-01-00'. <ul><li>If the NO_ZERO_IN_DATE mode is disabled, the server allows a date in which the year part is nonzero but the month or day part is zero. </li><li>If the NO_ZERO_IN_DATE mode is enabled but the strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) is disabled, a date in which the year part is nonzero but the month or day part is zero will be inserted as '0000-00-00'. </li><li>If both the strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) and the NO_ZERO_IN_DATE mode are enabled, a date in which the year part is nonzero but the month or day part is zero is not allowed and inserts produce an error. </li><li>If both the strict SQL mode (STRICT_ALL_TABLES or STRICT_TRANS_TABLES) and the NO_ZERO_IN_DATE mode are enabled and "ignore" is specified, a date in which the year part is nonzero but the month or day part is zero will be inserted as '0000-00-00'. </li></ul><li>ONLY_FULL_GROUP_BY: rejects queries for which the select list, HAVING condition, or ORDER BY list refers to non-aggregated columns that are neither named in the GROUP BY clause nor are functionally dependent on or uniquely determined by GROUP BY columns. </li><li>PAD_CHAR_TO_FULL_LENGTH: retains the trailing spaces in CHAR column values upon retrieval and the retrieved CHAR values are padded to their full length. </li><li>STRICT_ALL_TABLES: enables the strict SQL mode for all storage engines and rejects invalid data values. </li><li>STRICT_TRANS_TABLES: enables the strict SQL mode for the transaction storage engine and if possible, for non-transaction storage engines. </li></ul> |
 | Applicable scope | <li> Global   <li> Session |
 
 
