安全扫描修改

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -20,7 +20,7 @@
 
 * OCP Express
   
-  基于 Web 的 Oceanbase 4.x 管理工具，融合在 OceanBase 数据库集群中，支持对数据库集群关键性能及基本数据库管理功能。
+  基于 Web 的 Oceanbase 数据库 4.x 管理工具，融合在 OceanBase 数据库集群中，支持对数据库集群关键性能及基本数据库管理功能。
   
 ## 前提条件
 
@@ -46,7 +46,7 @@
 | OBServer 节点  | 10.10.10.3 | OceanBase 数据库 Zone3   |
 | OBAgent        | 10.10.10.1、10.10.10.2、10.10.10.3 | OceanBase 监控工具   |
 | ODP            | 10.10.10.4 | OceanBase 访问反向代理   |
-| OCP Express    | 10.10.10.4 | 基于 Web 的 Oceanbase 4.x 管理工具      |
+| OCP Express    | 10.10.10.4 | 基于 Web 的 Oceanbase 数据库 4.x 管理工具      |
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
@@ -388,4 +388,4 @@ obclient -h<IP> -P<PORT> -uroot@sys -p
 
   命令详细使用方法请参考 OBD 手册 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000001031933) 中 `obd cluster tenant create` 命令。
 
-* 方法二：通过命令行创建用户租户，详细操作可参考 [创建用户租户](../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md)
+* 方法二：通过命令行创建用户租户，详细操作可参考 [创建用户租户](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md)
