--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -147,6 +147,7 @@ spec:
 主要配置介绍：
 
 - `imageRepo`：OceanBase 镜像 repo。
+
 - `tag`：OceanBase 镜像 tag。
   
 - `cluster`：按需配置，如果需要在该 Kubernetes 集群中部署 OceanBase 集群，请将 cluster 配置为与 ob-operator 启动参数 `--cluster-name` 相同。
@@ -156,22 +157,22 @@ spec:
   
 - `memory`：建议配置为大于 10 Gi 的整数，小于 10 Gi 会引发系统异常。
   
-- `data-file`：该部分为 OBServer 系统配置项 `datafile_size` 的大小，建议为 memory 的 3 倍以上。用户可以自行按需配置 `storageClassName`。
+- `data-file`：该部分为 OceanBase 数据库系统配置项 `datafile_size` 的大小，建议为 Memory 的 3 倍以上。用户可以自行按需配置 `storageClassName`。
   
-- `data-log`：该部分为 OBServer 系统配置项 `data_dir` 的大小，建议为 memory 的 5 倍以上。用户可以自行按需配置 `storageClassName`。
+- `data-log`：该部分为 OceanBase 数据库系统配置项 `data_dir` 的大小，建议为 Memory 的 5 倍以上。用户可以自行按需配置 `storageClassName`。
   
-- `log`：该部分为 OBServer 系统日志的大小，建议为 30 Gi 以上。用户可以自行按需配置 `storageClassName`。
+- `log`：该部分为 OceanBase 数据库系统日志的大小，建议为 30 Gi 以上。用户可以自行按需配置 `storageClassName`。
 
-## 部署 OBProxy
+## 部署 ODP
 
-### 使用默认配置部署 OBProxy
+### 使用默认配置部署 ODP
 
 ```bash
 kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/deployment.yaml
 kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/service.yaml
 ```
 
-### 自定义部署 OBProxy
+### 自定义部署 ODP
 
 您也可以在 obproxy.yaml 中根据自己的配置做一些修改。
 参考以下部分配置文件进行修改：
@@ -232,8 +233,9 @@ spec:
 
 主要环境变量配置说明：
 
-- `APP_NAME`: OBProxy 的 appname。
-- `OB_CLUSTER`: OBProxy 连接的 OceanBase 集群名。
+- `APP_NAME`: ODP 的 appname。
+
+- `OB_CLUSTER`: ODP 连接的 OceanBase 集群名。
 
 - `RS_LIST`: OceanBase 集群的 rs_list, 这里是通过 OceanBase 集群的 service 地址来生成的，当部署好 OceanBase 集群之后，会自动产生两个环境变量 `SVC_OB_TEST_SERVICE_HOST`, `SVC_OB_TEST_SERVICE_PORT`, 分别表示 OceanBase 集群的服务地址和端口。
 
@@ -251,7 +253,7 @@ kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/
 
 ### 自定义部署 prometheus
 
-prometheus 查询 obagent 的请求地址通过 configmap 来进行配置，根据服务名，端口名来进行过滤, 如果 oceanbase 集群或者 obproxy 集群进行过自定义的配置，需要根据实际情况设置服务名的正则表达式。
+prometheus 查询 OBAgent 的请求地址通过 configmap 来进行配置，根据服务名，端口名来进行过滤, 如果 OceanBase 集群或者 ODP 集群进行过自定义的配置，需要根据实际情况设置服务名的正则表达式。
 
 ```yaml
 # configmap 中关键配置
@@ -296,14 +298,15 @@ scrape_configs:
 
 - service 和 port 说明:
 
-  - oceanbase: ob-operator 会根据部署的 oceanbase 集群名称来创建一个 service， 命名的规则是 `svc-monitor-${obcluster_name}`, 端口名为 `monagent`, 如果部署 oceanbase 的时候自定义了集群名，需要根据实际的集群名称来修改对应配置
-  - obproxy: 需要配置对应的 obproxy 的 service 和 port name
+  - oceanbase: ob-operator 会根据部署的 OceanBase 集群名称来创建一个 service， 命名的规则是 `svc-monitor-${obcluster_name}`, 端口名为 `monagent`, 如果部署 OceanBase 集群时自定义了集群名，需要根据实际的集群名称来修改对应配置
+  
+  - obproxy: 需要配置对应的 ODP 的 service 和 port name
 
 - 监控指标的请求路径:
 
-  - oceanbase 监控指标： 请求路径分别为 `/metrics/ob/basic`, `/metrics/ob/extra`
+  - OceanBase 集群监控指标： 请求路径分别为 `/metrics/ob/basic`, `/metrics/ob/extra`
   
-  - obproxy 监控指标: obproxy 自身支持了 prometheus 协议暴露监控指标的能力，请求路径为 `/metrics`
+  - ODP 集群监控指标: ODP 自身支持了 prometheus 协议暴露监控指标的能力，请求路径为 `/metrics`
   
 ### 验证
 
@@ -353,19 +356,22 @@ data:
 
 配置说明：
 
-- `url`：grafana 的配置中会使用到 prometheus 的服务地址作为数据源的配置(datasource 中的 url 字段)，需要根据 prometheus 的实际部署情况来填写
+- `url`：Grafana 的配置中会使用到 prometheus 的服务地址作为数据源的配置(datasource 中的 url 字段)，需要根据 prometheus 的实际部署情况来填写
 
 ### 验证
 
-浏览器打开 grafana 的地址，通过 `admin` 用户登陆，默认密码也是 `admin`, 第一次会提示修改密码
+浏览器打开 Grafana 的地址，通过 `admin` 用户登陆，默认密码也是 `admin`，第一次登录会提示修改密码。
 有三个配置好的 dashboard 可以直接导入
 
 - oceanbase: 15215
+
 - 主机: 15216
+
 - obproxy: 15354
+
 导入之后，可以查看对应的监控图表
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>obproxy 需要有实际请求之后，才会有监控数据展示</p>
+    <p>ODP 需要有实际请求之后，才会有监控数据展示</p>
   </main>
