adjust the doc  position

--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/8.diagnostic-area-mysql.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/8.diagnostic-area-mysql.md
@@ -164,4 +164,4 @@ obclient> SELECT @var2;
 
 * 执行 `RESIGNAL`
 
-  在存储程序内的复合语句中执行条件处理程序期间，`RESIGNAL` 语句用于传递可用的错误条件信息。`RESIGNAL` 可能会在传递信息之前更改部分或全部信息，并修改堆栈诊断区域，详细信息请参见 [RESIGNAL](5.resignal-mysql.md)。
+  在存储程序内的复合语句中执行条件处理程序期间，`RESIGNAL` 语句用于传递可用的错误条件信息。`RESIGNAL` 可能会在传递信息之前更改部分或全部信息，并修改堆栈诊断区域，详细信息请参见 [RESIGNAL](../9.pl-exception-handling-statement-mysql/5.resignal-mysql.md)。
