--- a/zh-CN/7.reference/4.development-reference/6.hbaseapi/3.use-of-the-hbaseapi-client.md
+++ b/zh-CN/7.reference/4.development-reference/6.hbaseapi/3.use-of-the-hbaseapi-client.md
@@ -8,8 +8,8 @@ HBaseAPI 客户端基于 TableAPI 提供的基本接口，在客户端封装了 
 进行客户端操作前，需要了解下列 OceanBase 数据库的基本知识：
 
 + [HBaseAPI 方案介绍](1.introduction-to-hbaseapi-scheme.md)
-+ [使用 OBD 部署 OceanBase 数据库](../../2.quick-start/4.use-obd-to-deploy-oceanbase-database.md)
-+ [通过 MySQL 客户端连接 OceanBase 数据库](../../14.developer-guide/2.connect-to-oceanbase-database/1.connect-to-oceanbase-database-through-a-mysql-client.md)
++ [体验 OceanBase 数据库企业版](../../../2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md)
++ [通过 MySQL 客户端连接 OceanBase 数据库](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md)
 
 ## HBaseAPI 部署
 
@@ -47,7 +47,7 @@ HBaseAPI 客户端基于 TableAPI 提供的基本接口，在客户端封装了 
 4.在集群详细信息页找到 **ConfigURL** 参数，该参数在客户端初始化中需要配置。
 ![获取 ConfigURL](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V3.1.3/zh-CN/Tools/TableAPI/oceanbase-doczh-CN-9.supporting-tools-8.hbaseapi-HBaseAPI%20%E5%AE%A2%E6%88%B7%E7%AB%AF%E4%BD%BF%E7%94%A8%E4%BB%8B%E7%BB%8D-01.png)
 
-### 设置客户端对 OBServer 的登录用户&密码
+### 设置客户端对 OBServer 节点的登录用户&密码
 
 使用 OBClient 或 MySQL 客户端连接 OBServer 集群，创建 SYS_USER_NAME 以及 SYS_PASSWORD。创建方式，请参考 [如何创建租户用户](https://open.oceanbase.com/docs/observer-cn/V3.1.1/10000000000014143)。
 下文示例通过客户端自带 proxyro 用户说明，但要设置 proxyro 密码，设置方法如下：
