--- a/zh-CN/7.reference/7.command-line-tools/10.cdc/2.obcdc/2.obcdc-parameters/2.obcdc-configuration-items.md
+++ b/zh-CN/7.reference/7.command-line-tools/10.cdc/2.obcdc/2.obcdc-parameters/2.obcdc-configuration-items.md
@@ -131,7 +131,7 @@ obcdc 4.1 版本支持通过数据字典来获取元信息（schema/日志流信
 
 | 配置项       | 含义      | 默认值 | 可否动态变更 |  备注       |
 |------------|-----------|-----|--------|-------------------------|
-| meta_data_refresh_mode                  | 用于指定 schema/日志流等元信息的获取方式               | online   | 否      | <ul><li>online 模式：通过 SchemaService 向 server 查询 schema 信息，需要能够访问OBServer。</li><li>data_dict 模式：通过日志中的数据字典解析 schema 信息。</li></ul> |
+| meta_data_refresh_mode                  | 用于指定 schema/日志流等元信息的获取方式               | online   | 否      | <ul><li>online 模式：通过 SchemaService 向 server 查询 schema 信息，需要能够访问 OBServer 节点。</li><li>data_dict 模式：通过日志中的数据字典解析 schema 信息。</li></ul> |
 
 ### 租户管理
 
