--- a/zh-CN/1.learn-more-about-oceanbase/2.differences-between-enterprise-edition-and-community-edition.md
+++ b/zh-CN/1.learn-more-about-oceanbase/2.differences-between-enterprise-edition-and-community-edition.md
@@ -39,7 +39,8 @@ OceanBase 数据库提供企业版和社区版两种形态。
 |高性能| 数据分区（Range/Hash/List）| 支持| 支持 |
 |高性能| 全局索引| 支持| 支持 |
 |高性能| 高级压缩能力| 支持| 支持 |
-|多模| TABLE API| 支持| 支持 |
+|多模| TableAPI| 支持| 支持 |
+|多模| HbaseAPI| 支持| 支持 |
 |多模| JSON| 支持| 支持 |
 |多模| GIS| 支持| 支持 |
 |安全| 审计| 支持| 不支持 |
