--- a/zh-CN/7.reference/4.development-reference/5.tableapi/3.faq.md
+++ b/zh-CN/7.reference/4.development-reference/5.tableapi/3.faq.md
@@ -61,7 +61,7 @@ Caused by: com.mysql.jdbc.exceptions.jdbc4.MySQLSyntaxErrorException: Access den
 
 * 解决方案
 
-  您可以使用 OBClient 或 MySQL 客户端登录 OceanBase 集群（详细信息请参考 [通过 obclient 连接 OceanBase 租户](../../14.developer-guide/2.connect-to-oceanbase-database/2.connect-to-an-oceanbase-database-tenant-through-obclient.md) 和 [通过 MySQL 客户端连接 OceanBase 数据库](../../14.developer-guide/2.connect-to-oceanbase-database/1.connect-to-oceanbase-database-through-a-mysql-client.md)），登录集群后执行以下指令设置 proxyro 密码。
+  您可以使用 OBClient 或 MySQL 客户端登录 OceanBase 集群（详细信息请参考 [通过 OBClient 连接 OceanBase 租户](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md) 和 [通过 MySQL 客户端连接 OceanBase 数据库](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md)），登录集群后执行以下指令设置 proxyro 密码。
 
   ```unknow
   grant select on oceanbase.* to proxyro identified by 'xxx'; 
