--- a/zh-CN/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
+++ b/zh-CN/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
@@ -600,9 +600,9 @@ OceanBase 数据库 V4.1.0 推荐使用的平台工具版本如下。
 |OceanBase Connector/J|V2.4.3|
 |OceanBase Connecotr/ODBC| V2.0.7|
 |OceanBase Client（OBClient）|V2.2.2|
-|OceanBase Deployer（OBD）|V1.6.0|
+|OceanBase Deployer（OBD）|V2.0.0|
 |OceanBase Agent（OBAgent）|V1.3.0|
-|ob-operator |V1.1.0|
+|ob-operator |V1.2.0|
 |MySQL JDBC| V5.1.47|  
 
 ## 约束限制
@@ -613,6 +613,7 @@ OceanBase 数据库 V4.1.0 推荐使用的平台工具版本如下。
 * OceanBase 数据库 V4.1.0 节点在生产环境最低要求 运行规格为 4C16GB，租户内存资源大于 2GB，CPU 资源大于 1C。
 * OceanBase 数据库 V4.1.0 当前仅支持 F 副本，其它类型副本如 R 副本将在后续版本补齐。
 * OceanBase 数据库 V4.1.0 当前仅支持调大租户的 Unit 个数（`UNIT_NUM`），后续版本将支持调小租户的 Unit 个数。
+* OceanBase 数据库 V4.1.0 支持从 V4.0 版本在线升级到 V4.1 版本，OBD 暂未适配完成，后续版本会补齐该能力。
 * OceanBase 数据库 V4.1.0 版本 `DROP DATABASE` 操作一次删除数据库内的表的个数超过 200 个时存在删除失败的风险，建议业务先 `DROP TABLE` 后再执行 `DROP DATABASE` 操作，后续 V4.2 版本将修复该问题。  
 
 
