--- a/zh-CN/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
+++ b/zh-CN/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
@@ -528,11 +528,11 @@ Benchmark SQL V5.0
 |`__all_ddl_task_status`|	增加 `execution_id` 列来标记 DDL 的每次单副本构建任务。|	变更|	4.1|
 |`__all_virtual_span_info`|	存放诊断信息。|	新增|	4.1|
 |`__all_virtual_show_trace`|	展示处理后的诊断信息。|	新增|	4.1|
-|`__all_virtual_io_scheduler`	展示 IOPS 与带宽的统计信息。|	新增	|4.1|
+|`__all_virtual_io_scheduler`	|展示 IOPS 与带宽的统计信息。|	新增	|4.1|
 |`__all_virtual_io_status`	|展示不同租户、不同类别的请求 IO 排队情况。|	新增	|4.1|
 |`V$OB_SQL_AUDIT`	|新增加 `PARTITION_HIT` 字段，用于判断是否会发生分区路由，是否是远程执行。|	变更|	4.1|
 |`DBA_RSRC_PLAN_DIRECTIVES`	|展示 resource manager 中的 IO 资源配置情况	|新增	|4.1|
-|`V$OB_TABLET_STATS`	自适应 Compaction 的 Tablet 级别的采集信息，有助于问题排查和定位。|	新增	|4.1|
+|`V$OB_TABLET_STATS`	|自适应 Compaction 的 Tablet 级别的采集信息，有助于问题排查和定位。|	新增	|4.1|
 |`DBA_OB_TENANTS`	|扩展普通支持普通租户可查看，增加展示例如LOCALITY、同步位点、租户类型等信息（`TENANT_ROLE`、`SWITCHOVER_STATUS`、`SWITCHOVER_EPOCH`、`SYNC_SCN`、`REPLAYABLE_SCN`、`READABLE_SCN`、`RECOVERY_UNTIL_SCN`、`LOG_MODE`、`ARBITRATION_SERVICE_STATUS`）。|	变更	|4.1|
 |`V$OB_LOG_STAT`	|新增列 `arbitration_member`、`degraded_list`，表示仲裁成员和降级副本列表。|	变更	|4.1|
 |`V$OB_TRANSACTION_SCHEDULERS`	|展示事务的 scheduler 信息，有助于问题排查和定位。|	新增	|4.1|
