--- a/zh-CN/6.manage/8.logging/1.logging-overview.md
+++ b/zh-CN/6.manage/8.logging/1.logging-overview.md
@@ -12,7 +12,7 @@
 
 程序日志分为不同的模块，且有父模块和子模块两个层级。
 
-* OceanBase 数据库的父模块包括 `CLIENT`、`CLOG`、`COMMON`、`ELECT、`LIB`、`PROXY`、`RPC`、`RS`、`SERVER`、`SHARE`、`SQL`、`STORAGE`、`TLOG` 等。
+* OceanBase 数据库的父模块包括 `CLIENT`、`CLOG`、`COMMON`、`ELECT`、`LIB`、`PROXY`、`RPC`、`RS`、`SERVER`、`SHARE`、`SQL`、`STORAGE`、`TLOG` 等。
 
 * 如果父模块下含有子模块，则表示为 `父模块.子模块`。例如：`SQL.PARSER`，则 SQL 表示 SQL 模块，`SQL.PARSER` 表示 SQL 模块下的 PARSER 子模块；`SQL.*` 表示 SQL 模块下的所有子模块。
 
@@ -25,10 +25,10 @@ OceanBase 数据库日志模块所属的日志文件分为 `observer.log`、`ele
 |日志名称|日志路径|
 |---|---|
 |启动和运行日志（`observer.log`、`observer.log.wf`）|OBServer 服务器的 `$work_dir/log` 目录下。|
-|选举模块日志（`election.log`、`election.log.wf`）|OBServer 服务器的 `$work_dir/log` 目录下。|
+|选举日志（`election.log`、`election.log.wf`）|OBServer 服务器的 `$work_dir/log` 目录下。|
 |Root Service 日志（`rootservice.log`、`rootservice.log.wf`）|OBServer 服务器的 `$work_dir/log` 目录下。|
 
-OceanBase 数据库的单个日志文件大小不超过 256MB，当日志文件大小达到 256MB 时，系统会进行日志轮转。原日志文件追加时间为后缀（格式为 `yyyyMMddHHmmss`），时间为本日志文件中最后一条日志的生成时间，并生成新的日志文件。发生日志轮转时，`.wf` 日志文件即使没到 256MB 也会一起轮转。也就是说 `xxx.log.wf` 文件和 `xxx.log` 文件总是一一对应的，`.wf` 文件一般情况下远小于 256M。
+OceanBase 数据库的单个日志文件大小不超过 256MB，当日志文件大小达到 256 MB 时，系统会进行日志轮转。原日志文件追加时间为后缀（格式为 `yyyyMMddHHmmss`），时间为本日志文件中最后一条日志的生成时间，并生成新的日志文件。发生日志轮转时，`.wf` 日志文件即使没到 256MB 也会一起轮转。也就是说 `xxx.log.wf` 文件和 `xxx.log` 文件总是一一对应的，`.wf` 文件一般情况下远小于 256 MB。
 
 典型日志文件目录如下：
 
@@ -46,7 +46,7 @@ log
 └── rootservice.log.wf.20220427165438
 ```
 
-OceanBase 数据库原生支持日志归档（通过集群配置项 `enable_syslog_recycle控制`），当某种日志文件数达到 `max_syslog_file_count` 时，日志轮转时删除最老的日志文件。日志文件最大空间使用可按如下方式评估: `max_syslog_file_count * 265M * 3 * (enable_syslog_wf ? 2 : 1)`。
+OceanBase 数据库原生支持日志归档（通过集群配置项 `enable_syslog_recycle` 控制），当某种日志文件数达到 `max_syslog_file_count` 时，日志轮转时删除最老的日志文件。日志文件最大空间使用可按如下方式评估: `max_syslog_file_count * 256M * 3 * (enable_syslog_wf ? 2 : 1)`。
 
 OceanBase 数据库原生日志归档功能基于文件数进行日志归档，当 OceanBase 数据库与外部管控系统（例如 OCP）一起部署时，通常使用外部管控系统提供的基于磁盘空间使用率的日志归档功能。
 
