--- a/zh-CN/5.data-migration/1.data-migration-overview.md
+++ b/zh-CN/5.data-migration/1.data-migration-overview.md
@@ -9,11 +9,15 @@
 * 数据库替换。
 * 数据库逻辑复制，包括读写分离、数据库容灾、业务多活等。
 * 业务上的数据复制需求。
+
 OceanBase 数据库提供丰富的数据迁移复制方法，包括：
+
 * 使用 OMS 迁移（建议）
 * 使用 OBLOADER & OBDUMPER 迁移
+
   * 使用 OBLOADER 导入数据
   * 使用 OBDUMPER 导出数据
+
 * 使用 SQL 脚本迁移
 * 使用 MyDumper 迁移
 * 使用 DataX 迁移
@@ -25,9 +29,9 @@ OceanBase 数据库提供丰富的数据迁移复制方法，包括：
 |迁移方案|结构迁移|全量数据迁移|增量数据迁移|数据校验|支持的数据源|
 |---------|---------|-----------|------------|---------|-------|
 |OMS|支持|支持|支持|支持|MySQL<br>PostgreSQL<br>Oracle<br>DB2<br>TiDB<br>OceanBase<br>Kafka<br>RocketMQ<br>Datahub<br>ADB|
-|OBLOADER & OBDUMPER|	不支持|	支持|不支持|不支持|	OceanBase|
+|OBLOADER & OBDUMPER|	支持|	支持|不支持|不支持|	OceanBase|
 |SQL 脚本迁移|	支持	|支持|	不支持	|不支持	|主流数据库，但无法跨实例做数据迁移|
 |MyDumper|	支持	|支持|	不支持|	不支持	|MySQL 兼容的数据源|
 |DataX|不支持|支持|不支持|不支持|较多，具体范围查看官方文档|
 |OUTFILE 语句|	不支持	|支持	|不支持	|不支持	|MySQL<br>OceanBase|
-|DBCAT|支持|bu支持|不支持|不支持|较多，具体范围查看官方文档|
+|DBCAT|支持|不支持|不支持|不支持|较多，具体范围查看官方文档|
