--- a/zh-CN/6.manage/7.monitor/2.monitor-items-introduction.md/3.sql-monitor/3.execution-plan.md
+++ b/zh-CN/6.manage/7.monitor/2.monitor-items-introduction.md/3.sql-monitor/3.execution-plan.md
@@ -66,8 +66,8 @@ obclient> select * from GV$OB_PLAN_CACHE_PLAN_EXPLAIN where tenant_id=1 and svr_
 * `DISK_READS`：所有执行物理读次数。
 * `DIRECT_WRITES`：所有执行写盘的次数。
 * `BUFFER_GETS`：所有执行逻辑读次数。
-* `APPLICATION_WAIT_TIME`：所有执行所有 application 类事件的总时间。
-* `CONCURRENCY_WAIT_TIME`：所有执行所有 concurrency 类事件的总时间。
+* `APPLICATION_WAIT_TIME`：执行所有 application 类事件的总时间。
+* `CONCURRENCY_WAIT_TIME`：执行所有 concurrency 类事件的总时间。
 * `USER_IO_WAIT_TIME`：所有执行所有 user_io 类事件的总时间。
 * `ROWS_PROCESSED`：所有执行选择的结果行数或执行更改表中的行数。
 * `ELAPSED_TIME`：所有执行接收到请求到执行结束消耗时间。
