410 GV$OB_PLAN_CACHE_PLAN_STAT optimize

--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
@@ -57,9 +57,9 @@
 | DISK_READS            | BIGNIT(20)   |  NUMBER(38)                        | 所有执行物理读次数  |
 | DIRECT_WRITES         | BIGNIT(20)   |  NUMBER(38)                        | 所有执行写盘的次数    |
 | BUFFERS_GETS          | BIGNIT(20)   |  NUMBER(38)                        | 所有执行逻辑读次数    |
-| APPLICATION_WATI_TIME | BIGNIT(20) UNSIGNED   |  NUMBER(38)  | 所有执行所有 Application 类事件的总时间     |
-| CONCURRENCY_WAIT_TIME | BIGNIT(20) UNSIGNED  |  NUMBER(38)   | 所有执行所有 Concurrency 类事件的总时间     |
-| USER_IO_WAIT_TIME     | BIGNIT(20)  UNSIGNED |  NUMBER(38)   | 所有执行所有 `USER_IO` 类事件的总时间   |
+| APPLICATION_WATI_TIME | BIGNIT(20) UNSIGNED   |  NUMBER(38)  | 该请求执行过程中, 所有 Application 类事件的总时间     |
+| CONCURRENCY_WAIT_TIME | BIGNIT(20) UNSIGNED  |  NUMBER(38)   | 该请求执行过程中, 所有 Concurrency 类事件的总时间     |
+| USER_IO_WAIT_TIME     | BIGNIT(20)  UNSIGNED |  NUMBER(38)   | 该请求执行过程中, 所有 `USER_IO` 类事件的总时间   |
 | ROWS_PROCESSED        | BIGNIT(20)   |  NUMBER(38)   | 所有执行选择的结果行数或执行更改表中的行数    |
 | ELAPSED_TIME          | BIGNIT(20) UNSIGNED   |  NUMBER(38)  | 所有执行接收到请求到执行结束消耗时间    |
 | CPU_TIME              | BIGNIT(20) UNSIGNED   |  NUMBER(38)  | 所有执行消耗的 CPU 时间     |
