--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/23.gv-plan_cache_plan_stat-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/23.gv-plan_cache_plan_stat-of-oracle-mode.md
@@ -45,9 +45,9 @@ GV$OB_PLAN_CACHE_PLAN_STAT
 | DISK_READS            | NUMBER(38)                        | NO             | 所有执行物理读的次数                                                                                                                                                                                                                                                                                                                                                                                                                                         |
 | DIRECT_WRITES         | NUMBER(38)                        | NO             | 所有执行写盘的次数                                                                                                                                                                                                                                                                                                                                                                                                                                          |
 | BUFFERS_GETS          | NUMBER(38)                        | NO             | 所有执行逻辑读的次数                                                                                                                                                                                                                                                                                                                                                                                                                                         |
-| APPLICATION_WATI_TIME | NUMBER(38)                        | NO             | 所有执行所有 Application 类事件的总时间                                                                                                                                                                                                                                                                                                                                                                                                                         |
-| CONCURRENCY_WAIT_TIME | NUMBER(38)                        | NO             | 所有执行所有 Concurrency 类事件的总时间                                                                                                                                                                                                                                                                                                                                                                                                                         |
-| USER_IO_WAIT_TIME     | NUMBER(38)                        | NO             | 所有执行所有 user_io 类事件的总时间                                                                                                                                                                                                                                                                                                                                                                                                                             |
+| APPLICATION_WATI_TIME | NUMBER(38)                        | NO             | 该请求执行过程中, 所有 Application 类事件的总时间                                                                                                                                                                                                                                                                                                                                                                                                                         |
+| CONCURRENCY_WAIT_TIME | NUMBER(38)                        | NO             | 该请求执行过程中, 所有 Concurrency 类事件的总时间                                                                                                                                                                                                                                                                                                                                                                                                                         |
+| USER_IO_WAIT_TIME     | NUMBER(38)                        | NO             | 该请求执行过程中, 所有 user_io 类事件的总时间                                                                                                                                                                                                                                                                                                                                                                                                                             |
 | ROWS_PROCESSED        | NUMBER(38)                        | NO             | 所有执行选择的结果行数或执行更改表中的行数                                                                                                                                                                                                                                                                                                                                                                                                                              |
 | ELAPSED_TIME          | NUMBER(38)                        | NO             | 所有执行接收到请求到执行结束消耗时间                                                                                                                                                                                                                                                                                                                                                                                                                                 |
 | CPU_TIME              | NUMBER(38)                        | NO             | 所有执行消耗的 CPU 时间                                                                                                                                                                                                                                                                                                                                                                                                                                     |
