--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -30,7 +30,7 @@
 
 * 生产环境下，您需要进行环境和配置检查，具体操作请参考 [部署前配置](2.environment-and-configuration-checks/1.view-resources-optional.md) 章节。
 
-* 中控机器中已安装 OBD，建议安装最新版本，详细信息请参考 [安装 OBD](https://www.oceanbase.com/docs/community-obd-cn-10000000001031921)。
+* 中控机器中已安装 OBD，建议安装最新版本，详细信息请参考 [安装并配置 OBD](https://www.oceanbase.com/docs/community-obd-cn-10000000001690693)。
 
 * 您的机器中已安装 OBClient 客户端，详细信息请参考 [OBClient 文档](https://github.com/oceanbase/obclient/blob/master/README.md)。
 
@@ -55,7 +55,10 @@
   <p>在生产环境下，推荐将 ODP 和应用部署在一台机器上，以 ODP 访问应用的时间。您可以在每个应用的服务器上部署一个 ODP 服务。在本例中，为了更方便介绍，将 ODP 单独部署。</p>
   </li>
   <li>
-  <p>部署 ODP 的机器使用的配置可以和部署 OceanBase 数据库的机器配置不一致。部署 ODP 最小只需 1C/1G 内存。
+  <p>部署 ODP 的机器使用的配置可以和部署 OceanBase 数据库的机器配置不一致。部署 ODP 最小只需 1C/1G 内存。</p>
+  </li>
+  <li>
+  <p>单机部署操作步骤可参考 OBD 文档中 <a href="https://www.oceanbase.com/docs/community-obd-cn-10000000001690026">单机部署 OceanBase 数据库</a> 一文。</p>
   </li>
   </ul>
 </main>
@@ -140,8 +143,12 @@
      <h4>说明</h4>
      <p>配置文件分为小规格开发和专业开发两种模式，两种模式的配置文件中配置项基本相同，配置的规格略有不同，您可根据实际资源条件进行选择。</p>
      <ul>
-     <li>小规格开发模式：适用于个人设备（内存不低于 8 GB），配置文件名中带有 <code>mini</code> 或 <code>min</code> 标识。</li>
-     <li>专业开发模式：适用于高配置 ECS 或物理服务器（可用资源不低于 16 核 64 GB）。</li>
+     <li>
+     <p>小规格开发模式：适用于个人设备（内存不低于 8 GB），配置文件名中带有 <code>mini</code> 或 <code>min</code> 标识。</p>
+     </li>
+     <li>
+     <p>专业开发模式：适用于高配置 ECS 或物理服务器（可用资源不低于 16 核 64 GB）。</p>
+     </li>
      </ul>
    </main>
 
@@ -314,7 +321,7 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>本节中所使用命令的详细使用方法可参考 OBD 文档中的 <a href="https://www.oceanbase.com/docs/community-obd-cn-10000000001031933">集群命令组</a>。</p>
+  <p>本节中所使用命令的详细使用方法可参考 OBD 文档中的 <a href="https://www.oceanbase.com/docs/community-obd-cn-10000000001690699">集群命令组</a>。</p>
 </main>
 
 1. 部署 OceanBase 数据库
@@ -386,6 +393,6 @@ obclient -h<IP> -P<PORT> -uroot@sys -p
   obd cluster tenant create <deploy name> [-n <tenant name>] [flags]
   ```
 
-  命令详细使用方法请参考 OBD 手册 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000001031933) 中 `obd cluster tenant create` 命令。
+  命令详细使用方法请参考 OBD 手册 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000001690699) 中 `obd cluster tenant create` 命令。
 
 * 方法二：通过命令行创建用户租户，详细操作可参考 [创建用户租户](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md)
