--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md
@@ -8,7 +8,7 @@
 
 * 部署 OceanBase 数据库及全部组件，至少需要 4vCPU、10 GB 内存、50 GB 磁盘的可用资源，推荐内存在 16 GB 以上。
 
-* 部署 OCP Express 组件需先安装配置 Java 环境，目前仅支持 JDK1.8 版本。详细操作可参考 [常见问题](链接待放) 中 **部署 OCP Express 前如何配置 Java 环境**。
+* 部署 OCP Express 组件需先安装配置 Java 环境，目前仅支持 JDK1.8 版本。详细操作可参考 [常见问题](https://www.oceanbase.com/docs/community-obd-cn-10000000001690696) 中 **部署 OCP Express 前如何配置 Java 环境**。
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
@@ -205,7 +205,7 @@ OpenJDK 64-Bit Server VM (build 25.362-b08, mixed mode)
 
 ### 管理部署后的集群
 
-您可执行如下命令对 OBD 部署的集群进行管理。更多操作详见 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000001031933)。
+您可执行如下命令对 OBD 部署的集群进行管理。更多操作详见 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000001690699)。
 
 ```shell
 # 查看集群列表
