修改时钟偏差描述

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/3.configure-the-clock-source-optional.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/3.configure-the-clock-source-optional.md
@@ -2,7 +2,12 @@
 
 本文介绍如何为集群内的多台机器配置 NTP 时钟源，如果您计划单机部署 OceanBase 数据库，或者做个人测试，亦或者已配置 NTP 时钟同步，则无需设置。
 
-如果您计划部署分布式 OceanBase 集群，需要保证集群内各机器的时间同步，否则集群无法启动，服务在运行时也会出现异常。物理机与时钟服务器的误差在 50ms 以下可认为时钟是同步状态，OceanBase 集群最大容忍误差不能超过 100ms。当超过 100ms 时，会出现无主情况。恢复时钟同步后，重启 OceanBase 集群，可以恢复正常。
+如果您计划部署分布式 OceanBase 集群，需要保证集群内各机器的时间同步，否则集群无法启动，服务在运行时也会出现异常。OceanBase 集群允许的时钟偏差不能超过 2s。当超过 2s 时，会出现无主情况。恢复时钟同步后，重启 OceanBase 集群，可以恢复正常。
+
+<main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>OceanBase 自 V4.1.0 起支持动态修改时钟，不会对数据正确性和集群稳定运行带来影响。</p>
+</main>
 
 ## 前提条件
 
