--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/3.configure-the-clock-source-optional.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/3.configure-the-clock-source-optional.md
@@ -25,10 +25,8 @@
 
 2. 运行以下命令查看服务器的 NTP 连接。
 
-   当物理机与时钟服务器的时间误差在 50ms 以内时，系统即认为时钟是同步的。
-
    ```shell
-   [root@centos-01 /root]#ntpq -4p
+   [root@centos-01 ~]# ntpq -4p
    remote refid st t when poll reach delay offset jitter
    ==============================================================================
    *time6.aliyun.co xxx.xxx.xxx.xxx 2 u 712 1024 377 21.951 4.253 4.208
