410迁移概述修改

--- a/zh-CN/5.data-migration/1.data-migration-overview.md
+++ b/zh-CN/5.data-migration/1.data-migration-overview.md
@@ -1,6 +1,10 @@
 # 数据迁移概述
 
-## 概述
+数据迁移是日常运维操作的一种常见操作，是调整集群负载和机房搬迁的必备操作。虽然集群内部、表与表之间数据归档、磁盘水位均衡、资源单元搬迁等操作在 OceanBase 数据库中可以通过简单命令快速发起，但是涉及异构数据源和集群间的数据同步等功能时就需要借助外部工具。
+
+本文档主要介绍几种常用的数据迁移方法及工具。
+
+## 应用场景
 
 数据迁移是数据库运维常见的操作，主要有如下的应用场景：
 
@@ -9,25 +13,31 @@
 * 数据库替换。
 * 数据库逻辑复制，包括读写分离、数据库容灾、业务多活等。
 * 业务上的数据复制需求。
+
+## 迁移方案
+
 OceanBase 数据库提供丰富的数据迁移复制方法，包括：
+
 * 使用 OMS 迁移（建议）
 * 使用 OBLOADER & OBDUMPER 迁移
+
   * 使用 OBLOADER 导入数据
   * 使用 OBDUMPER 导出数据
+
 * 使用 SQL 脚本迁移
 * 使用 MyDumper 迁移
 * 使用 DataX 迁移
 * 使用 OUTFILE 语句迁移
 * 使用 DBCAT 迁移
 
-## 场景
+迁移方案具体支持情况如下：
 
 |迁移方案|结构迁移|全量数据迁移|增量数据迁移|数据校验|支持的数据源|
 |---------|---------|-----------|------------|---------|-------|
-|OMS|支持|支持|支持|支持|MySQL<br>PostgreSQL<br>Oracle<br>DB2<br>TiDB<br>OceanBase<br>Kafka<br>RocketMQ<br>Datahub<br>ADB|
-|OBLOADER & OBDUMPER|	不支持|	支持|不支持|不支持|	OceanBase|
-|SQL 脚本迁移|	支持	|支持|	不支持	|不支持	|主流数据库，但无法跨实例做数据迁移|
-|MyDumper|	支持	|支持|	不支持|	不支持	|MySQL 兼容的数据源|
+|OMS|支持|支持|支持|支持|MySQL</br>PostgreSQL</br>Oracle</br>DB2</br>TiDB</br>OceanBase</br>Kafka</br>RocketMQ</br>Datahub</br>ADB|
+|OBLOADER & OBDUMPER|支持|支持|不支持|不支持|OceanBase|
+|SQL 脚本迁移| 支持 |支持| 不支持 |不支持 |主流数据库，但无法跨实例做数据迁移|
+|MyDumper| 支持 |支持| 不支持| 不支持 |MySQL 兼容的数据源|
 |DataX|不支持|支持|不支持|不支持|较多，具体范围查看官方文档|
-|OUTFILE 语句|	不支持	|支持	|不支持	|不支持	|MySQL<br>OceanBase|
+|OUTFILE 语句| 不支持 |支持 |不支持 |不支持 |MySQL</br>OceanBase|
 |DBCAT|支持|bu支持|不支持|不支持|较多，具体范围查看官方文档|
