add notice for SPM

--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/7.manage-execution-plans/3.sql-execution-plan-management-spm.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/7.manage-execution-plans/3.sql-execution-plan-management-spm.md
@@ -2,6 +2,11 @@
 
 SQL Plan Management（SPM）是一种防止计划回退的机制，能够确保新生成的计划在经过验证后才被使用，以保证计划性能不断优化和更新。
 
+  <main id="notice" >
+    <h4>功能适用性</h4>
+    <p>目前 OceanBase 数据库社区版暂不支持 SPM 功能。</p>
+  </main>
+
 OceanBase 数据库支持在线 SPM 演进机制，即当发现新生成的计划不在基线中时，就会立即自动启动一个演进任务进行计划演进，这样就可以在用户无需手动干预的情况下自动完成计划演进。
 
 OceanBase 数据库的 SPM 使用 `DBA_SQL_PLAN_BASELINES` 和 `DBA_SQL_MANAGEMENT_CONFIG` 视图，以及 `DBMS_SPM` 系统包来管理执行计划。
