--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/5.memory-management-within-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/5.memory-management-within-a-tenant.md
@@ -12,16 +12,16 @@ OceanBase 数据库把租户内部的内存总体上分为以下两个部分：
 
 ## 不可动态伸缩的内存管理
 
-目前与不可动态伸缩内存相关的配置只有只有 `memstore_limit_percentage` 和 `ob_sql_work_area_percentage`，前者表示租户的 MemStore 部分最多占租户总内存上限的百分比，默认值为租户 `memory_size` 的 50%，后者表示 sql 执行过程中的内存占用，默认为租户 `memory_size` 的 5%。
+目前与不可动态伸缩内存相关的配置只有 `memstore_limit_percentage` 和 `ob_sql_work_area_percentage`，前者表示租户的 MemStore 部分最多占租户总内存上限的百分比，默认值为租户 `memory_size` 的 50%，后者表示 SQL 执行过程中的内存占用，默认为租户 `memory_size` 的 5%。
 
 租户的写入或者更新会增加 MemStore 的内存使用，当租户的 MemStore 部分内存到达上限以后，后续的写入或者更新操作将会被拒绝。
 
 OceanBase 数据库会根据 MemStore 的内存使用比例决定何时进行转储或者合并释放 MemStore 的内存，该比例由配置项 `freeze_trigger_percentage` 控制，表示当 MemStore 内存占用到达其上限的百分比后就进行冻结（转储和合并的前置动作），默认值为租户 MemStore 内存上限的 70%，即租户 `memory_size` 的 35%。
 
-  <main id="notice" type='explain'>
+<main id="notice" type='explain'>
     <h4>说明</h4>
     <p><code>memory_size</code> 是租户可使用的内存，您可以根据业务实际情况配置。</p>
-  </main>
+</main>
 
 ## 可动态伸缩的内存管理
 
@@ -45,7 +45,7 @@ KVCache 一般不需要配置，特殊场景下可以通过参数控制各种 Ca
 
 KVCache 中不同类型的 Cache 的信息可以通过查询 `oceanbase.GV$OB_KVCACHE` 视图获得。其中 `sys` 租户和普通租户的重要组成部分略有不同：
 
-* sys 租户上的 Cache 种类
+* `sys` 租户上的 Cache 种类
 
   |           类别            |                            说明                             |
   |---------------------------|------------------------------------------------------------|
