--- a/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/2.dump.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/2.dump.md
@@ -34,7 +34,7 @@ L2 层是基线 Major SSTable，为保持多副本间基线数据完全一致，
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p><code>memstore_limit_percentage</code> 用于设置租户使用 Memstore 的内存占其总可用内存的百分比。有关该配置项的详细介绍，请参见 <a href="../../../3.user-guide/14.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/139.memstore_limit_percentage-1-2-3.md">memstore_limit_percentage</a>。</p>
+    <p><code>memstore_limit_percentage</code> 用于设置租户使用 Memstore 的内存占其总可用内存的百分比。有关该配置项的详细介绍，请参见 <a href="../../../5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/139.memstore_limit_percentage.md">memstore_limit_percentage</a>。</p>
   </main>
 
 示例：
